--- a/.github/workflows/main_content-share-blog.yml
+++ b/.github/workflows/main_content-share-blog.yml
@@ -26,9 +26,11 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
-        env:
-          NEXT_PUBLIC_APP_APPLICATIONINSIGHTS_CONNECTION_STRING: ${{ secrets.NEXT_PUBLIC_APP_APPLICATIONINSIGHTS_CONNECTION_STRING }}
+          with:
+            env:
+              NEXT_PUBLIC_APP_APPLICATIONINSIGHTS_CONNECTION_STRING: ${{ secrets.NEXT_PUBLIC_APP_APPLICATIONINSIGHTS_CONNECTION_STRING }}
 
+          
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
