--- a/.github/workflows/main_content-share-blog.yml
+++ b/.github/workflows/main_content-share-blog.yml
@@ -1,66 +1,59 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - content-share-blog
+name: Deploy to Azure
 
 on:
   push:
-    branches:
-      - main
+    branches: ["main"]
+
   workflow_dispatch:
+
+permissions:
+  id-token: write 
+  contents: read 
 
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout 
+        uses: actions/checkout@v3
 
-      - name: Set up Node.js version
+      - name: Setup Node 
         uses: actions/setup-node@v3
         with:
-          node-version: '20.x'
+          node-version: "20"
 
-      - name: npm install, build, and test
+      - name: Install dependencies 
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
+      - name: 'Login to Azure Subscription' 
+        uses: azure/login@v1
         with:
-          name: node-app
-          path: release.zip
+            client-id: ${{ secrets.AZURE_CLIENT_ID }}
+            tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+            subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: node-app
+      - name: Build Next.js app
+        run: |
+          npm run build
+          mv .next/static .next/standalone/.next/static
+          # mv public .next/standalone/public
 
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-      
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: 'content-share-blog'
-          slot-name: 'Production'
-          package: .
-<<<<<<< HEAD
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_490CFA26D72F4D5997C13149666EE6F5 }}
-=======
-          
->>>>>>> b1194ae (updated ci/cd process)
+      - name: Deploy
+        shell: pwsh
+        run: |
+              $ZIP_FILE_NAME = "./${FILE_NAME}.zip"
+              zip $ZIP_FILE_NAME ./* .next -qr
+  
+              az webapp deploy `
+                  --resource-group $RESOURCE_GROUP_NAME `
+                  --name $WEB_APP_NAME `
+                  --src-path $ZIP_FILE_NAME `
+                  --slot staging `
+                  --type zip `
+                  --clean true 
+        env:
+            FILE_NAME: "azure-webapp"
+            RESOURCE_GROUP_NAME: "content-share-app-resources"
+            WEB_APP_NAME: "content-share-blog"
