--- a/.github/workflows/main_content-share-blog.yml
+++ b/.github/workflows/main_content-share-blog.yml
@@ -30,9 +30,9 @@ jobs:
       - name: 'Login to Azure Subscription' 
         uses: azure/login@v1
         with:
-            client-id: ${{ secrets.AZURE_CLIENT_ID }}
-            tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-            subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+            client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_FCDE7D3D05554448A21B1C97EDA0149A }}
+            tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_84B6F3DEF4B74259AFC6E61E2C821B96 }}
+            subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_9163DF7E7B1F483EAE0D27568F4EF1BD }}
 
       - name: Build Next.js app
         run: |
