--- a/.github/workflows/main_content-blog-share.yml
+++ b/.github/workflows/main_content-blog-share.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - content-blog-share
+name: Deploy to azure webapp
 
 on:
   push:
@@ -21,11 +21,15 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
+      - name: npm install
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          
+      - name: Build Next.js app
+        run: |
+          npm run build
+          mv .next/static .next/standalone/.next/static
+          # mv public .next/standalone/public
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
