--- a/.github/workflows/main_content-blog-share.yml
+++ b/.github/workflows/main_content-blog-share.yml
@@ -12,33 +12,24 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
-
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
-
-      - name: npm install
+      - name: npm install, build, and test
         run: |
           npm install
-          
-      - name: Build Next.js app
-        run: |
-          npm run build
-          mv .next/static .next/standalone/.next/static
-          # mv public .next/standalone/public
-
+          npm run build --if-present
+          npm run test --if-present
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
-
+        run: zip next.zip ./* .next -qr
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: release.zip
+          path: next.zip
 
   deploy:
     runs-on: ubuntu-latest
