--- a/.github/workflows/main_content-blog-share.yml
+++ b/.github/workflows/main_content-blog-share.yml
@@ -39,7 +39,6 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write #This is required for requesting the JWT
-
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -47,7 +46,7 @@ jobs:
           name: node-app
 
       - name: Unzip artifact for deployment
-        run: unzip release.zip
+        run: unzip next.zip
       
       - name: Login to Azure
         uses: azure/login@v2
