refactored for application insights

--- a/.github/workflows/main_content-blog-share.yml
+++ b/.github/workflows/main_content-blog-share.yml
@@ -18,6 +18,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
+        env:
+            NEXT_PUBLIC_APP_APPLICATIONINSIGHTS_CONNECTION_STRING: ${{ secrets.APPLICATIONINSIGHTS_CONNECTION_STRING }}
       - name: npm install, build, and test
         run: |
           npm install
@@ -44,17 +46,14 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
-
       - name: Unzip artifact for deployment
         run: unzip next.zip
-      
       - name: Login to Azure
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_EE5E37A462ED4004B97AEFB5E12A7863 }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_2BC8BECFD5314B78BC8A59468E09D0BF }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_A8D596F417C24A72AF82F1482DDA8341 }}
-
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
