--- a/.github/workflows/main_content-blog-share.yml
+++ b/.github/workflows/main_content-blog-share.yml
@@ -59,7 +59,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'content-blog-share'
+          app-name: 'content-share-app'
           slot-name: 'Production'
           package: .
           
